# AIQuant

./: .gitignore  DATA_SOURCES_ZH.md  DATA_STRATEGY_ZH.md  EXPERIMENT_PLAN_ZH.md  FINDINGS_ZH.md  NEXT_WORK_ZH.md  UPSTREAM.md  workflow.md
DeepMarket/: .gitignore  configuration.py  constants.py  run.py
DeepMarket/ABIDES/agent/: OrderBookImbalanceAgent.py  WorldAgent.py
DeepMarket/ABIDES/cli/: book_plot.py  (+9 more)
DeepMarket/preprocessing/: AssetUniverse.py  LOBSTERDataBuilder.py  MultiAssetLOBDataset.py  build_structured_pairs.py  clip_rth.py  cross_asset_consistency.py  fetch_databento.py  lead_lag.py  structured_universes.py
DeepMarket/tests/: data_adapters_smoke.py  p0_smoke.py  p1_graph_smoke.py  p1_smoke.py  p2_smoke.py  p2_spread_smoke.py  p3_energy_smoke.py  p3_smoke.py  p4_smoke.py  structured_data_smoke.py
DeepMarket/tools/: binance_recorder.py
DeepMarket/utils/: utils_data.py
_c38/: _patch_timew.py  build_c38_data.py  build_lobbench_eval.py  build_lobbench_eval_ar.py  build_lobbench_eval_ar_p0.py  build_logtime_data.py  build_real_datasets.py  diag_grad.py  diag_graph.py  eval_p0.py  extract_scores.py  inspect_scores.py  lob_engine.py  make_baselines.py  p0_eval.sh  p0_lobbench.sh  patch_stability.py  pp_model.py  run_ma_c38.py  score_cmp.py  score_lobbench.py  stab_ab_driver.sh  stab_eval_driver.sh  stab_lobbench_nc.sh  stab_r3_driver.sh  timew_train.sh
lob_bench/: impact.py  partitioning.py  pyproject.toml  requirements.txt  run_bench.py  scoring.py
lob_bench/cross_asset/: __init__.py  arbitrage_metrics.py  cross_corr.py  lead_lag.py  spillover.py
(+51 files in other folders)
